@@ -1,4 +1,5 @@
 {{$NEXT}}
+- new method "clear_destination" on ReadTrace
 
 1.1       2012-07-10 12:10:01 Europe/London
 - added ReconnectOnFailure, and moved some attributes around
